--- a/CourseWork/course.tex
+++ b/CourseWork/course.tex
@@ -1,2 +1,184 @@
-\chapter{Пункт 1}
+\chapter{Теоретическое введение}
 	
+	\input{CourseWork/theorical_introduction}
+	
+	\section{Предметно-ориентированные языки и их реализация в Meta Programing System}
+		\subsection{Структура языка}
+
+		Проектирование языка начинается с определения структуры языка.~\cite{mpssource}
+		
+		Абстрактное синтаксическое дерево (англ. Abstract Syntax Tree) - логическое представление кода в памяти в виде дерева, который описывает иерархию узлов. Эти узлы имеют понятие отношений родитель-ребенок. Кроме того, два узла могут быть соединены друг с другом с явными ссылками, которые идут по всей иерархической структуре.
+		
+		\begin{figure}[ht] 
+			\center
+			\includegraphics [scale=0.27] {AST}
+			\caption{Абстрактное синтаксическое дерево} 
+			\label{img:AST}  
+		\end{figure}
+	
+		АСД-узлы организованы в модели. Узлы, которые не имеют родителей, называются корневыми узлами. Это элементы языка, лежащие на самом верхнем уровне. Например, в языке Java корневые узлы -- классы, интерфейсы и перечислимые типы.
+		
+		Узлы могут сильно отличаться друг от друга. Каждый узел сохраняет ссылку на своё определение -- концепцию. Концепция определяет тип узлов и задаёт структуру узлов данного класса. Она определяет, какие дети, свойства и ссылки может иметь экземпляр узла. Определения концепции формируются в объектно-ориентированной парадигме. Если одна концепция расширяет другую, она наследует всех детей, свойства и ссылки от своего родителя.
+		
+		\subsubsection{Определение концепции в MPS}
+		
+			В MPS для определения концепции используется встроенный язык Structure Language.~\cite{mpssource} Пример определения концепции можно увидеть на рис. \ref{img:concept1}.
+			
+			\begin{figure}[ht] 
+				\center
+				\includegraphics [scale=0.7] {concept1}
+				\caption{Пример определения концепции} 
+				\label{img:concept1}  
+			\end{figure}
+		
+		Концепции имеют 2 типа наследования: расширение имеющейся концепции и реализация концептуального интерфейса. 
+		
+		Свойства концепции определяются после ключевого слова \textbf{properties}. Свойство представляет собой значение, которое хранится внутри экземпляра концепции. Каждое свойство должно иметь тип, который для свойств ограничен до: примитивов, таких как булевый тип, строка и целое; перечислений, которые могут иметь значение из заранее заданного набора; и ограниченных типов данных (строк, ограниченных регулярными выражениями).
+		
+		Ссылки определяются после ключевого слова \textbf{references}. Для повышения выразительности языков узлам разрешено хранить ссылки на другие узлы. Каждая ссылка имеет имя, тип, и количество элементов (мощность). Тип ограничивает допустимый типом цели ссылки. Мощность определяет, как много ссылок такого рода узел может иметь. Ссылки могут только два типа мощностей: $ 1:0..1 $ и $ 1: 1$.
+		
+		Дети определяются после ключевого слова \textbf{children}. Каждое определение ребенок держит целевую концепцию, ее роль и количество элементов. Целевая концепция определяет тип детей. Роль определяет имя для этой группы детей. И, наконец, количество элементов определяет, сколько детей из этой группы могут содержаться в одном узле. Есть 4 разрешенных вида мощности: $ 1: 1 $, $ 1: 0..1 $, $ 1: 0..n $ и $ 1: 1..n $.
+		
+		Поле \textbf{alias} задаёт строку, с которой MPS будет ассоциировать данную концепцию.
+		
+	\subsection{Ограничения}
+		Структуры языка иногда может быть недостаточно, чтобы выразить дополнительные ограничения. MPS содержит возможность задать для каждой концепции определить такие дополнительные ограничения в пакете, под названием \textit{Constraints}.~\cite{mpssource}
+		
+		\begin{figure}[ht] 
+			\center
+			\includegraphics [scale=0.8] {Constraints}
+			\caption{Пример ограничения для концепции} 
+			\label{img:Constraints}  
+		\end{figure}
+	
+		Пакет позволяет определить три типа ограничений:
+		\begin{enumerate}
+			\item Ограничения на типы связи с другими концепциями:
+			\begin{enumerate}
+				\item быть ребёнком,
+				\item быть родителем,
+				\item быть предком,
+				\item быть корневым элементом.
+			\end{enumerate}
+			\item Ограничения для каждого параметра:
+			\begin{enumerate}
+				\item функция получения значения,
+				\item функция задания значения,
+				\item функция проверки корректности.
+			\end{enumerate}
+			\item Ограничение на ссылки:
+			\begin{enumerate}
+				\item функция, вызываемая при каждом изменении ссылки,
+				\item множество узлов, на которые можно сослаться,
+				\item функция проверки корректности
+				\item настройки отображения ссылки.
+			\end{enumerate}
+		\end{enumerate}
+	
+		Все ограничения описываются в виде функций на языке \textit{Base Language}.
+		
+	\subsection{Редактор}
+		Для того, чтобы определить удобную структуру кода, описывающего концепцию, можно воспользоваться пакетом редакторов, предоставляемым MPS.~\cite{mpssource}
+		
+		Редактор отображает узел и позволяет пользователю изменять, заменять, удалять его и так далее. Узлы различных концепций имеют разные редакторы. 
+		
+		В MPS, редактор состоит из клеток, которые сами по себе содержат другие клетки, некоторый текст или компонент пользовательского интерфейса. Каждый редактор имеет свою концепцию, для которого он определен. Концепция не может иметь более одного редактора. Если редактора нет, MPS воспользуется редактором ближайшего предка этой концепции, которая имеет редактор. 
+		
+		\begin{figure}[ht] 
+			\center
+			\includegraphics {editor}
+			\caption{Пример описания редактора} 
+			\label{img:editor}  
+		\end{figure}
+		
+		Для описания редактора определенной концепции, MPS использует специальный язык \textit{Editor Language}. Как можно увидеть, MPS применяет принципы языково-ориентированного программирования сам к себе. 
+		
+		Описание редактора состоит из описаний таблицы для хранения значений полей. Например, если вы хотите, чтобы ваш редактор состоял из уникальной клетки с неизменяемым текстом, необходимо создать в вашем описании редактора постоянную клеточную модель и указать этот текст. Типы ячеек определены в документации. Пример продемонстрирован на рис. \ref{img:editor}.
+		
+
+		
+\chapter{Проектирование}
+	\section{Определение структуры языка}
+		
+		На основе описания ДВС составим модель концепций и их связей и представим её в виде АСД (рис. \ref{img:dcn-AST}). Здесь аналогично рис. \ref{img:AST}, связи без направления обозначают отношение родительских концепции к дочернией, где родитель находится выше дочерней концепции, а направленные связи обозначают ссылку на концепцию.
+		
+		\begin{figure}[ht] 
+			\center
+			\includegraphics [scale=0.5] {dcn-AST}
+			\caption{АСД языка ДВС} 
+			\label{img:dcn-AST}  
+		\end{figure}
+	
+		Как видно из схемы, можно выделить 2 интерфейса. Первый содержит параметр -- время выполнения и называется "исполняемый". Второй содержит параметр -- количество ресурсов и называется "держатель ресурсов".
+	
+		Реализацию концепций можно увидеть в прил. \ref{AppendixA}.
+		
+		    
+	\section{Ограничения}
+		Опишем ограничения для реализованных в предыдущем пункте концепций и концептуальных интерфейсов:
+		\begin{enumerate}
+			\item \textbf{Цвет:} все компоненты цвета должны находиться в диапазоне от 0 до 255 в соответствии с цветовой моделью RGB.
+			\item \textbf{Ресурсы:} все ресурсы должны иметь уникальные имена внутри модели
+			\item \textbf{Держатель ресурсов:} количество ресусов должно быть неотрицательно.
+			\item \textbf{Исполняемый:} время испольнения должно быть неотрицательно.
+			\item \textbf{Место:} имя места должно быть уникально внутри содержащей его сети.
+			\item \textbf{Сеть:} имя сети должно быть уникально внутри модели.
+			\item \textbf{Связь:} может связывать переход только с местом, описанным в той же сети.
+		\end{enumerate}
+			
+		Реализация ограничений описана в прил. \ref{AppendixB}
+		
+	\section{Редактор}
+		Редактор для каждой описанной концепции описан в прил. \ref{AppendixC}.
+		
+	\section{Тестовый проект}
+		Создадим тестовый проект, содержащий 2 сети-объекта и 2 ресурса. Результат можно увидеть на рис. \ref{fig:project-tree}.	
+
+		\begin{figure}[th]
+			\centering
+			\includegraphics[width=0.7\linewidth]{images/test-project/project-tree}
+			\caption{Файлы тестового проекта.}
+			\label{fig:project-tree}
+		\end{figure}
+	
+		\lstinputlisting[language={Java},caption={Проект Project},label={list:Project}]{listings/test/Project.txt}
+		
+		\lstinputlisting[language={Java},caption={Сеть Axiom},label={list:Axiom}]{listings/test/Axiom.txt}
+		\lstinputlisting[language={Java},caption={Сеть SimpleNet},label={list:SimpleNet}]{listings/test/SimpleNet.txt}
+		
+		\lstinputlisting[language={Java},caption={Ресурс Car},label={list:Car}]{listings/test/Car.txt}
+		\lstinputlisting[language={Java},caption={Ресурс Bike},label={list:Bike}]{listings/test/Bike.txt}
+		
+		Представление распознаётся, как корректное.
+		
+		\subsection{Некорректный ресурс}
+			Попробуем создать ресурс с занятым именем и некорректными параметрами цвета. Как видно на рис. \ref{fig:resource-test}, имя и недопустимый параметр подсвечены красным, что говорит о том, что анализатор распознал ошибку.
+		
+			\begin{figure}[th]
+				\centering
+				\includegraphics[width=0.7\linewidth]{images/test-project/resource}
+				\caption{Ресурс с некорректными данными}
+				\label{fig:resource-test}
+			\end{figure}
+	
+		\subsection{Ограничения на связь}
+			В соответствии с ограничениями, определёнными выше, связь может ссылаться только на место, определённое в той же сети. Воспользуемся для проверки ограничения функцией определения возможных значений поля в среде MPS, нажав \textit{Ctrl+Space}. Как видно из рис. \ref{fig:connection-test}, тест пройден.
+			
+			\begin{figure}[th]
+				\centering
+				\includegraphics[width=0.7\linewidth]{images/test-project/connection}
+				\caption{Возможные значения ссылки на место у связи.}
+				\label{fig:connection-test}
+			\end{figure}
+	
+			Также проверим корректность проверки времени. На рис. \ref{fig:time} приведены результаты.
+	
+			\begin{figure}[th]
+				\centering
+				\includegraphics[width=0.7\linewidth]{images/test-project/time}
+				\caption{}
+				\label{fig:time}
+			\end{figure}
+		
+	
+	%TODO Визуализировать с помощью https://github.com/DSLFoundry/mps-langvis, если будет время
