--- a/CourseWork/title.tex
+++ b/CourseWork/title.tex
@@ -38,7 +38,8 @@
 			\begin{tabular}{  r  l }
 				Группа:	& А-13м-16 \\
 				Студент: 	& \thesisAuthorShort \\
-				Преподаватель:	& \supervisorFioShort \\
+				Преподаватель:	& \teacherFioShort \\
+				Научный руководитель:	& \supervisorFioShort \\
 			\end{tabular}%
 		}
 	\end{table}
