--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -9,6 +9,8 @@
   language = {russian}
 }
 
+
+
 @BOOK{Sokolov,
   author = {Соколов, А. Н. and Сердобинцев, К. С.},
   editor = {Бочарова, В. М.},
@@ -29,6 +31,28 @@
   year = {2008},
   numpages = {508},
   language = {russian}
+}
+
+@BOOK{piterson,
+	author = {Питерсон, Дж.},
+	title = {Теория сетей Петри и моделирования систем},
+	%edition = {3-е изд, перераб. и доп.},
+	address = {М.},
+	publisher = {<<Мир>>},
+	year = {1984},
+	numpages = {264},
+	language = {russian}
+}
+
+@BOOK{kusmok2010model,
+	author = {Кузьмук, В.В. and  Супруненко, О.О.},
+	title = {Модифицированные сети Петри и устройства моделирования параллельных процессов.},
+	%edition = {3-е изд, перераб. и доп.},
+	address = {К.},
+	publisher = {Маклаут},
+	year = {2010},
+	numpages = {260},
+	language = {russian}
 }
 
 @BOOK{Lermontov,
@@ -189,6 +213,15 @@
   number = {4},
   pages = {19},
   language = {russian}
+}
+
+@ARTICLE{falkTheory,
+	author = {Фальк, В.Н.},
+	title = {Отношения, сети Петри, динамические вычислительные сети},
+	journal = {в печати},
+	year = {2016},
+	pages = {17},
+	language = {russian}
 }
 
 @ARTICLE{Kriger,
@@ -390,6 +423,26 @@
   urldate = {19.01.2015},
   language = {russian}
 }
+
+
+@online{mpssource,
+	title={Руководство пользователя MPS},
+	author={Aleksey Makarkin},
+	medium={confluence.jetbrains.com},
+	url = {https://confluence.jetbrains.com/display/MPSD34/MPS+User%27s+Guide},
+	urldate = {20.11.2016},
+	language = {russian}
+}
+
+@online{qtdoc,
+	title={Qt Documentation},
+	author={The~Qt~Company},
+	medium={The Qt Company},
+	url = {http://doc.qt.io/},
+	urldate = {01.03.2016},
+	language = {russian}
+}
+
 
 % Real example
 % & в названии журнала надо экранировать
