--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,12 +1,24 @@
 
-{\actuality} Введение в тему работы
+{\actuality} Предметно-ориентированный язык (англ. Domain-specific language, DSL) -- язык программирования, специализированный для конкретной области применения. Построение такого языка и/или его структура данных отражают специфику решаемых с его помощью задач.
 
-{\aim} Подготовить/реализовать/изучить.
+Использование DSL имеет ряд преимуществ:
+\begin{itemize}
+	\item на этапе проектирования дает возможность создания решений в терминах предметной области, благодаря чему специалисты в данной предметной области могут создавать и модифицировать DSL программы;
+	\item решение проблемы с помощью DSL происходит на соответствующем уровне абстракции. Это позволяет экспертам в предметной области понимать и верифицировать DSL-программы;
+	\item программы, написанные с использованием DSL лаконичны. Написание DSL с использованием терминов предметной области дает возможность в дальнейшем читать программу достаточно легко;
+	\item происходит повышение надежности, эффективности и качества сопровождения. Поскольку на уровне модели операции осуществлять легче, они более эффективны и подвержены меньшему количеству ошибок, чем те же операции на уровне кода;
+	\item DSL позволяет на уровне абстракции, соответствующему домену, проводить оптимизацию и валидацию;
+	описание домена на одном уровне абстракции можно потом преобразовать в более низкий уровень с подробной детализацией. Таким образом можно дополнять модель на разных этапах разработки.
+\end{itemize}
+
+{\aim} Спроектировать язык для описания динамической вычислительной сети.
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}
-  \item Задача 1
-  \item Задача 2
+  \item Изучить способы реализации DSL.
+  \item Составить концептуальную модель языка
+  \item Реализовать язык в системе Meta Programming System
+  \item Проверить результат на соответствия ограничениям.
 \end{enumerate}
     
 
