--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,9 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Тема}{Тема}}
+{\texorpdfstring{Проектирование предметно-ориентированного языка для динамических вычислительных сетей}{Проектирование предметно-ориентированного языка для динамических вычислительных сетей}}
 \newcommand{\courseName}
-{Название Предмета}
-\newcommand{\labNumber}
-{1}
+{Современные компьютерные технологии}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
@@ -26,10 +24,11 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Фамилия Имя Отчество}
+{Фальк Вадим Николаевич}
+\newcommand{\teacherFioShort}            % Научный руководитель, ФИО
+{П.Р.~Варшавский}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.О.~Фамилия}
-
+{В.Н.~Фальк}
 
 % To avoid conflict with beamer class use \providecommand
 \providecommand{\keywords}%                 % Ключевые слова для метаданных PDF диссертации и автореферата
