--- a/CourseWork/conclusion.tex
+++ b/CourseWork/conclusion.tex
@@ -9,4 +9,4 @@
 Основные результаты работы заключаются в следующем.
 \input{common/concl}
 
-И какая-нибудь заключающая фраза.
+Созданный язык предполагается использовать в системе, моделирующей процесс в динамических вычислительных сетях.
