--- a/common/concl.tex
+++ b/common/concl.tex
@@ -2,8 +2,9 @@
 %% 5.3.3 В заключении диссертации излагают итоги выполненного исследования, рекомендации, перспективы дальнейшей разработки темы.
 %% 9.2.3 В заключении автореферата диссертации излагают итоги данного исследования, рекомендации и перспективы дальнейшей разработки темы.
 \begin{enumerate}
-  \item На основе анализа \ldots
-  \item Численные исследования показали, что \ldots
-  \item Математическое моделирование показало \ldots
-  \item Для выполнения поставленных задач был создан \ldots
+	
+	\item Изучиены способы реализации DSL.
+	\item Составлена концептуальная модель языка для реализации динамических вычислительных сетей.
+	\item Реализован язык в системе Meta Programming System.
+	\item Язык протестирован и удовлетворяет всем указанным ограничениям.
 \end{enumerate}
