course work report finished

--- a/CourseWork.tex
+++ b/CourseWork.tex
@@ -22,8 +22,6 @@
 
 \usepackage{hyperref} %ссылки на сторонние ресурсы
 
-\renewcommand\thesection{\arabic{section}} %номера секций не содержат номер главы
-
 \begin{document}
 	\input{common/renames}                   % Переопределение именований
 	\include{CourseWork/title}           % Титульный лист
@@ -31,4 +29,5 @@
 	\include{CourseWork/introduction}
 	\include{CourseWork/course}
 	\include{CourseWork/conclusion}
+	\include{CourseWork/references}
 \end{document}
