--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,12 +1,12 @@
 
-{\actuality} Введение в тему работы
+{\actuality} 
 
-{\aim} Подготовить/реализовать/изучить.
+{\aim} Произвести компьютерное моделирование непрерывных математических моделей на использовании дифференциальных уравнений или функциональных соотношений.
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}
-  \item Задача 1
-  \item Задача 2
+  \item Изучить выбранные модели.
+  \item Разработать программы.
 \end{enumerate}
     
 
