--- a/common/data.tex
+++ b/common/data.tex
@@ -12,12 +12,8 @@
 
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
-\newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Тема}{Тема}}
 \newcommand{\courseName}
-{Название Предмета}
-\newcommand{\labNumber}
-{1}
+{Непрерывные математические модели}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
@@ -26,9 +22,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Фамилия Имя Отчество}
+{Ижуткин Виктор Сергеевич}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.О.~Фамилия}
+{В.С.~Ижуткин}
 
 
 % To avoid conflict with beamer class use \providecommand
