--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -20,6 +20,17 @@
   language = {russian}
 }
 
+@BOOK{Samarskiy,
+	author = {Самарский, А. А. and Михайлов, А. П.},
+	editor = {Ходан, Е. Ю.},
+	address = {М.},
+	publisher = {Физико-математическая литература},
+	title = {Математическое моделирование: Идеи. Методы. Примеры.},
+	year = {2001},
+	numpages = {319},
+	language = {russian}
+}
+
 @BOOK{Gaidaenko,
   author = {Гайдаенко, Т. А.},
   title = {Маркетинговое управление: принципы управленческих решений и российская практика},
