course work without excersises

--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,7 +1,7 @@
 
 {\actuality} 
 
-{\aim} Произвести компьютерное моделирование непрерывных математических моделей на использовании дифференциальных уравнений или функциональных соотношений.
+{\aim} Произвести компьютерное моделирование непрерывных математических моделей на основе дифференциальных уравнений или функциональных соотношений.
 
 Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
 \begin{enumerate}
