Updated course work template

--- a/CourseWork.tex
+++ b/CourseWork.tex
@@ -28,7 +28,9 @@
 	\input{common/renames}                   % Переопределение именований
 	\include{CourseWork/title}           % Титульный лист
 	\include{CourseWork/contents}
-	\include{CourseWork/introduction}
-	\include{CourseWork/course}
-	\include{CourseWork/conclusion}
+	\include{CourseWork/introduction} % Введение
+	\include{CourseWork/course}  % Текст работы
+	\include{CourseWork/conclusion} % Заключение
+	\include{common/references} % Список литературы
+	\include{CourseWork/appendix} % Приложения
 \end{document}
