--- a/common/characteristic.tex
+++ b/common/characteristic.tex
@@ -1,12 +1,3 @@
-
-{\actuality} Введение в тему работы
-
-{\aim} Подготовить/реализовать/изучить.
-
-Для~достижения поставленной цели необходимо было решить следующие {\tasks}:
-\begin{enumerate}
-  \item Задача 1
-  \item Задача 2
-\end{enumerate}
+{\aim} Создание интерфейса, обеспечивающего возможность редактирования структуры динамических вычислительных сетях (далее ДВС) и моделирования процесса в ДВС.
     
 
