--- a/common/data.tex
+++ b/common/data.tex
@@ -13,11 +13,9 @@
 \newcommand{\kafedra}                % Кафедра
 {Кафедра Прикладной Математики}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\texorpdfstring{Тема}{Тема}}
+{\texorpdfstring{Среда для редактирования динамических вычислительных сетей}{Среда для редактирования динамических вычислительных сетей}}
 \newcommand{\courseName}
-{Название Предмета}
-\newcommand{\labNumber}
-{1}
+{Проектирование человеко-машинных интерфейсов}
 \newcommand{\thesisCity}               % Диссертация, город защиты
 {Москва}
 \newcommand{\thesisYear}               % Диссертация, год защиты
@@ -26,9 +24,9 @@
 {Национальный исследовательский университет}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{Фамилия Имя Отчество}
+{Кружилов Сергей Иванович}
 \newcommand{\supervisorFioShort}            % Научный руководитель, ФИО
-{И.О.~Фамилия}
+{С.И.~Кружилов}
 
 
 % To avoid conflict with beamer class use \providecommand
