--- a/CourseWork.tex
+++ b/CourseWork.tex
@@ -30,7 +30,7 @@
 	\include{CourseWork/contents}
 	\include{CourseWork/introduction} % Введение
 	\include{CourseWork/course}  % Текст работы
-	\include{CourseWork/conclusion} % Заключение
-	\include{common/references} % Список литературы
-	\include{CourseWork/appendix} % Приложения
+	%\include{CourseWork/conclusion} % Заключение
+	%\include{common/references} % Список литературы
+	%\include{CourseWork/appendix} % Приложения
 \end{document}
